--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -20,7 +20,9 @@
               <div class="input-group mb-3">
                 <label for="kw" class="input-group-text">Keyword :</label>
                 <input type="text" id="kw" formControlName="keyword" class="form-control">
-                <button class="btn btn-info">Search</button>
+                <button class="btn btn-info">
+                  <i class="bi bi-search"></i>
+                </button>
               </div>
             </form>
           </div>
