--- a/src/app/accounts/accounts.component.html
+++ b/src/app/accounts/accounts.component.html
@@ -1,1 +1,45 @@
-<p>accounts works!</p>
+<div class="container mt-2">
+    <div class="row">
+        <div class="col col-md-6">
+            <div class="card">
+                <div class="card-header">Accounts</div>
+                <div class="card-body">
+                    <form [formGroup]="accountFormGroup" (ngSubmit)="handleSearchAccount()">
+                        <div class="input-group">
+                          <label class="input-group-text">Account Id :</label>
+                          <input type="text" formControlName="accountId" class="form-control">
+                          <!--Attention !! : quand je click sur le button fait appel a (ngSubmit)="handleSearchAccount()" -->
+                          <button class="btn btn-info">
+                            <i class="bi bi-search"></i>
+                            Search
+                          </button>
+                        </div>
+                    </form>
+                    <ng-container *ngIf="accountObservable | async as accountDetails">
+                        <div class="mb-3">
+                            <label>Account ID : </label>
+                            <label><strong>{{accountDetails.accountId}}</strong></label>
+                        </div>
+                        <div class="mb-3">
+                            <label>Balance : </label>
+                            <label><strong>{{accountDetails.balance | number : '1.2-2'}}</strong></label>
+                        </div>
+                    </ng-container>
+                    
+                    <div class="mb-3">
+                       <label></label>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col col-md-6">
+
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
