--- a/src/app/accounts/accounts.component.html
+++ b/src/app/accounts/accounts.component.html
@@ -24,6 +24,27 @@
                             <label>Balance : </label>
                             <label><strong>{{accountDetails.balance | number : '1.2-2'}}</strong></label>
                         </div>
+
+                        <table class="table">
+                            <thead>
+                                <th>ID</th><th>Date</th><th>Type</th><th>Amount</th>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let op of accountDetails.accountOperationDTOS">
+                                    <td>{{op.id}}</td>
+                                    <td>{{op.operationDate | date : 'dd/MM/yyy - HH:mm:ss'}}</td>
+                                    <td>{{op.type}}</td>
+                                    <td class="text-end">{{op.amount  | number : '1.2-2'}}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <ul class="nav nav-pils">
+                            <!--parcour ce tableau ([].constructor) dans la dimension c'est le nombre de page (accountDetails.totalPages)(pour faire la pagination) -->
+                            <!--puis récuperer l'index du tableau (si je veux la valeur c'est item, c'est l'index c'est index)-->
+                            <li *ngFor="let item of [].constructor(accountDetails.totalPages); let page=index">
+                                <a [ngClass]="page == currentPage?'btn-info' : 'btn-outline-info'" (click)="goToPage(page)" class="btn ms-1 mt-1">{{page}}</a>
+                            </li>
+                        </ul>
                     </ng-container>
                     
                     <div class="mb-3">
@@ -33,7 +54,40 @@
             </div>
         </div>
         <div class="col col-md-6">
-
+            <div class="card" *ngIf="accountObservable">
+                <div class="card-header">Operations</div>
+                <div class="card-body">
+                    <form [formGroup]="operationFormGroup" (ngSubmit)="handleAccountOperation()">
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" formControlName="operationType" value="DEBIT">
+                            <label class="form-check-label">DEBIT : </label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" formControlName="operationType" value="CREDIT">
+                            <label class="form-check-label">CREDIT : </label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" formControlName="operationType" value="TRANSFER">
+                            <label class="form-check-label">TRANSFER : </label>
+                        </div>
+                        <div class="mb-3"  *ngIf="operationFormGroup.value.operationType =='TRANSFER'">
+                            <label class="form-label">Account Destination : </label>
+                            <input type="text" formControlName="accountDestination" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Amount : </label>
+                            <input type="text" formControlName="amount" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Description : </label>
+                            <input type="text" formControlName="description" class="form-control">
+                        </div>
+                        <div class="d-grid mt-2">
+                            <button class="btn btn-success">Save Operation</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 </div>
