Finalize account operations (DEBIT, CREDIT, TRANSFER) and generate a new component to display customer accounts

--- a/src/app/accounts/accounts.component.html
+++ b/src/app/accounts/accounts.component.html
@@ -15,6 +15,19 @@
                           </button>
                         </div>
                     </form>
+
+                    <ng-template #errorTemplate>
+                        
+                        <ng-container *ngIf="errorMessage ; else loading">
+                            <div class="text-danger">{{errorMessage}}</div>
+                        </ng-container>
+
+                        <ng-template #loading>
+                            <div>loading...</div>
+                        </ng-template>
+                        
+                    </ng-template>
+                    
                     <ng-container *ngIf="accountObservable | async as accountDetails">
                         <div class="mb-3">
                             <label>Account ID : </label>
