--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -46,6 +46,12 @@
                   <button class="btn btn-danger btn-sm" (click)="onDeleteCustomer(customer)">
                     <i class="bi bi-trash"></i> 
                   </button>
+                  <button class="btn btn-success ms-2" (click)="handleCustomerAccounts(customer)">
+                    Account
+                  </button>
+                </td>
+                <td class="text-end">
+                  
                 </td>
               </tr>
             </tbody>
