--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,7 +12,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/customers">Customers</a>
+            <a class="nav-link" routerLink="/admin/customers">Customers</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/admin/accounts">Accounts</a>
