--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -33,10 +33,14 @@
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li>
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-custom-blue" type="submit">Search</button>
-        </form>
+        <ul class="navbar" *ngIf="authService.isAuthenticated == true">
+          <li>
+            <a class="nav-link active">{{this.authService.username}}</a>
+          </li>
+          <li class="ms-3">
+            <button (click)="handleLogout()" class="btn btn-outline-primary">Logout</button>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
